@@ -2,16 +2,19 @@
 
 ## [1.1.0] - 2025-10-04
 
-Second version, with added quality of life features.
+Second version, with added quality of life features and radio controls.
 TODO:
 
 ### Added
-- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c.
+- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x.
 - Added Deb package building for future apt-get package
 - Added modular parse/protocols and example, can now add your own parser of data
 - Added documentation about creation of parsing-modules
 - Added attack/decay of spectrum values
 - Added symbol animation on decay
+- Added example sweeping rtl-sdr 
+- Added soupy-sdr controls
+- Added iqfile mode
 
 ### Changed
 - Set min-max db per default
